* reload map button added * no crashes * need to add asking permissions if location is turned off * need to disable the notifications when minimised

--- a/covid19Map/java/app/src/main/res/layout/syptoms_heatmap.xml
+++ b/covid19Map/java/app/src/main/res/layout/syptoms_heatmap.xml
@@ -152,6 +152,12 @@
         android:paddingBottom="20dp"
         android:visibility="gone">
         <Button
+            android:id="@+id/reloadButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="@string/reloadButton"/>
+        <Button
             android:id="@+id/stopButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
