--- a/covid19Map/java/app/src/main/res/layout/syptoms_heatmap.xml
+++ b/covid19Map/java/app/src/main/res/layout/syptoms_heatmap.xml
@@ -1,18 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-     Copyright (C) 2012 The Android Open Source Project
-
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-
-          http://www.apache.org/licenses/LICENSE-2.0
-
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map_container"
@@ -21,148 +7,149 @@
     android:layout_height="match_parent"
     tools:context="com.MainActivity">
 
-    <fragment
-        android:id="@+id/map"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        class="com.google.android.gms.maps.SupportMapFragment" />
-
-    <LinearLayout
-        android:id="@+id/inputBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:paddingLeft="40dp"
-        android:paddingRight="40dp"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp">
-
-        <TextView
+        <fragment
+            android:id="@+id/map"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/question"/>
+            android:layout_height="match_parent"
+            class="com.google.android.gms.maps.SupportMapFragment" />
 
-        <RadioGroup
-            android:id="@+id/radioLevels"
+        <LinearLayout
+            android:id="@+id/inputBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical">
-            <RadioButton
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/question"
+                android:textStyle="bold"/>
+
+            <RadioGroup
+                android:id="@+id/radioLevels"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical">
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="@string/symptoms"
+                    android:id="@+id/symptoms"/>
+
+                <LinearLayout
+                    android:id="@+id/inputCheckbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+                    <CheckBox
+                        android:id="@+id/cough"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Moderate to severe cough"
+                        android:onClick="onCheckboxClicked">
+                    </CheckBox>
+                    <CheckBox
+                        android:id="@+id/fever"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="High fever"
+                        android:onClick="onCheckboxClicked">
+                    </CheckBox>
+                    <CheckBox
+                        android:id="@+id/soreThroat"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Sore throat"
+                        android:onClick="onCheckboxClicked">
+                    </CheckBox>
+                    <CheckBox
+                        android:id="@+id/breathless"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Feeling breathless"
+                        android:onClick="onCheckboxClicked">
+                    </CheckBox>
+                    <CheckBox
+                        android:id="@+id/chestPain"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Persistent pain or pressure in chest"
+                        android:onClick="onCheckboxClicked">
+                    </CheckBox>
+                    <CheckBox
+                        android:id="@+id/severeWeakness"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Severe weakness"
+                        android:onClick="onCheckboxClicked">
+                    </CheckBox>
+                    <CheckBox
+                        android:id="@+id/diahorrea"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Diahorrea"
+                        android:onClick="onCheckboxClicked">
+                    </CheckBox>
+                </LinearLayout>
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="@string/covid19"
+                    android:id="@+id/covid19"/>
+            </RadioGroup>
+
+            <Button
+                android:id="@+id/update"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="@string/symptoms"
-                android:id="@+id/symptoms"/>
+                android:text="@string/common_google_play_services_update_button"/>
 
-            <LinearLayout
-                android:id="@+id/inputCheckbox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:orientation="vertical"
-                android:visibility="gone">
-                <CheckBox
-                    android:id="@+id/cough"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Moderate to severe cough"
-                    android:onClick="onCheckboxClicked">
-                </CheckBox>
-                <CheckBox
-                    android:id="@+id/fever"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="High fever"
-                    android:onClick="onCheckboxClicked">
-                </CheckBox>
-                <CheckBox
-                    android:id="@+id/soreThroat"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Sore throat"
-                    android:onClick="onCheckboxClicked">
-                </CheckBox>
-                <CheckBox
-                    android:id="@+id/breathless"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Feeling breathless"
-                    android:onClick="onCheckboxClicked">
-                </CheckBox>
-                <CheckBox
-                    android:id="@+id/chestPain"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Persistent pain or pressure in chest"
-                    android:onClick="onCheckboxClicked">
-                </CheckBox>
-                <CheckBox
-                    android:id="@+id/severeWeakness"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Severe weakness"
-                    android:onClick="onCheckboxClicked">
-                </CheckBox>
-                <CheckBox
-                    android:id="@+id/diahorrea"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Diahorrea"
-                    android:onClick="onCheckboxClicked">
-                </CheckBox>
-            </LinearLayout>
-            <RadioButton
+            <Button
+                android:id="@+id/healthy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="@string/covid19"
-                android:id="@+id/covid19"/>
-        </RadioGroup>
+                android:text="@string/healthy"/>
 
-        <Button
-            android:id="@+id/update"
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/stopButtonPanel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="@string/common_google_play_services_update_button"/>
-
-        <Button
-            android:id="@+id/healthy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="@string/healthy"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/stopButtonPanel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:paddingLeft="40dp"
-        android:paddingRight="40dp"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        android:visibility="gone">
-        <Button
-            android:id="@+id/reloadButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="@string/reloadButton"/>
-        <Button
-            android:id="@+id/stopButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="@string/stopButton"/>
-    </LinearLayout>
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
+            android:visibility="gone">
+            <Button
+                android:id="@+id/reloadButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/reloadButton"/>
+            <Button
+                android:id="@+id/stopButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/stopButton"/>
+        </LinearLayout>
 
 </RelativeLayout>
