* new app icon * terms and conditions pop up updated * welcome page updated * 120 secs timespan updated for the map load * 10 km radius updated * 60 secs time for sending location data * map data json response object updated * map icons show red / yellow circle * text corrections

--- a/covid19Map/java/app/src/main/res/layout/syptoms_heatmap.xml
+++ b/covid19Map/java/app/src/main/res/layout/syptoms_heatmap.xml
@@ -42,7 +42,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:text="@string/symptoms"
-                    android:id="@+id/symptoms"/>
+                    android:id="@+id/symptoms"
+                    android:onClick="onFluSymptomsClicked"/>
 
                 <LinearLayout
                     android:id="@+id/inputCheckbox"
@@ -106,7 +107,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:text="@string/covid19"
-                    android:id="@+id/covid19"/>
+                    android:id="@+id/covid19"
+                    android:onClick="onCovid19Clicked"/>
             </RadioGroup>
 
             <Button
