--- a/covid19Map/java/app/src/main/res/layout/popup_window.xml
+++ b/covid19Map/java/app/src/main/res/layout/popup_window.xml
@@ -10,7 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginTop="10dip"
-        android:text="@string/summary" />
+        android:text="@string/terms" />
 
     <!--<Button
         android:id="@+id/ok"
